# VulkanTutorial

./: .clang-format  .gitignore  CMakeLists.txt  README.md  VulkanTest.sln  flake.nix  justfile
VulkanTest/: VulkanTest.vcxproj  VulkanTest.vcxproj.filters  compile.bat  debugLayer.cpp  debugLayer.h  main.cpp  queues.cpp  queues.h  shader.cpp  shader.h  swapChain.cpp  triangle.vert
apps/: CMakeLists.txt  triangle.cpp
include/vk/: device.hpp  devices.hpp  instance.hpp  queues.hpp  shader.hpp  surface.hpp  swapChain.hpp
shaders/: CMakeLists.txt
src/vk/: CMakeLists.txt  debugLayer.cpp  device.cpp  devices.cpp  instance.cpp  queues.cpp  shader.cpp  surface.cpp  swapChain.cpp
